--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,6 @@
+// src/styles/variables.scss
 @import url('https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&display=swap');
+
 @font-face {
   font-family: 'Public Pixel';
   src: url('/src/assets/fonts/PublicPixel.ttf') format('truetype');
@@ -9,6 +11,12 @@
 
 $pixel-font: 'Public Pixel', monospace;
 $gothic-font: 'Special Gothic Expanded One', sans-serif;
-
 $black: #0D0D0D;
 $white: #F2F2F2;
+
+:root {
+  --color-black: #{$black};
+  --color-white: #{$white};
+}
+
+
