--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -18,8 +18,8 @@ button{
 body {
   font-family: inherit;
   line-height: 1.5;
-  background-color: #fff;
-  color: #000;
+  background-color: $black;
+  color: $white;
 }
 
 ul,
