--- a/src/components/Welcome/Welcome.module.scss
+++ b/src/components/Welcome/Welcome.module.scss
@@ -3,7 +3,7 @@
     inset: 0;
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     z-index: 9999;
 }
 
