chore: change syntax to match latest versions of packages

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,8 +1,4 @@
 
-:root {
-  --color: $white;
-}
-
 @font-face {
   font-family: public-pixel;
   src: url("/fonts/public-pixel.woff");
@@ -12,17 +8,9 @@
   src: url("/fonts/chill.woff");
 }
 
-* {
-  margin: 0;
-  padding: 0;
-}
-
 .webgl {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   width: 100%;
   outline: none;
   z-index: 1;
