chore(webgl): adjust camera position and model to fit 16:9 screen ratio

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,7 +12,7 @@
 $pixel-font: 'Public Pixel', monospace;
 $gothic-font: 'Special Gothic Expanded One', sans-serif;
 $black: #0D0D0D;
-$white: #F2F2F2;
+$white: #7C746D;
 
 :root {
   --color-black: #{$black};
