--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,10 +8,22 @@
   src: url("/fonts/chill.woff");
 }
 
+.main-container {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .webgl {
-  position: fixed;
-  inset: 0;
-  width: 100%;
+  position: relative;
+  max-width: 100vw;
+  height: 56.25vw;
+  max-height: 100vh;
   outline: none;
   z-index: 1;
 }
