chore: adjust webgl ui

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,11 +12,8 @@
 $pixel-font: 'Public Pixel', monospace;
 $gothic-font: 'Special Gothic Expanded One', sans-serif;
 $black: #0D0D0D;
-$white: #7C746D;
+$white: #F2F2F2;
+$primary: #8D8985;
 
-:root {
-  --color-black: #{$black};
-  --color-white: #{$white};
-}
 
 
