--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,7 +13,7 @@ $pixel-font: 'Public Pixel', monospace;
 $gothic-font: 'Special Gothic Expanded One', sans-serif;
 $black: #0D0D0D;
 $white: #F2F2F2;
-$primary: #8D8985;
+$primary: #868381;
 
 
 
