chore: format all files in project

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,11 +1,10 @@
-
 @font-face {
   font-family: public-pixel;
-  src: url("/fonts/public-pixel.woff");
+  src: url('/fonts/public-pixel.woff');
 }
 @font-face {
   font-family: chill;
-  src: url("/fonts/chill.woff");
+  src: url('/fonts/chill.woff');
 }
 
 .main-container {
@@ -42,6 +41,5 @@
 }
 
 #loading {
-    display: none;
+  display: none;
 }
-
