--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,13 +14,10 @@
 $pixel-font: 'Public Pixel', monospace;
 $gothic-font: 'Special Gothic Expanded One', sans-serif;
 $jetbrains-font: 'JetBrains Mono', monospace;
-$black: #0D0D0D;
+$black: #0d0d0d;
 $black-50: rgba(13, 13, 13, 0.5);
-$white: #F2F2F2;
-$grey: #BFBFBF;
+$white: #f2f2f2;
+$grey: #bfbfbf;
 $primary: #868381;
 $width-content: 750px;
 $header-height: 220px;
-
-
-
