--- a/src/components/ParticleWaveBackground/ParticleWaveBackground.module.scss
+++ b/src/components/ParticleWaveBackground/ParticleWaveBackground.module.scss
@@ -1,10 +1,10 @@
-.background{
-    position: fixed;
-    inset: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    display: block;
-    background-color: var(--background-color, #0D0D0D);
-opacity: 0.5;
+.background {
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  display: block;
+  background-color: var(--background-color, #0d0d0d);
+  opacity: 0.5;
 }
