--- a/src/components/MainPortfolio/MainPortfolio.module.scss
+++ b/src/components/MainPortfolio/MainPortfolio.module.scss
@@ -1,22 +1,21 @@
 .wrapper {
   position: fixed;
   inset: 0;
-  width: $width-content;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   z-index: 9999;
   background-color: $black;
-  color: white;
+  color: $white;
   font-family: $jetbrains-font;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
   scrollbar-width: none;
-  margin: auto;
 }
 
 .description {
+  width: $width-content;
   margin-top: 12px;
   p {
     margin: 16px 0;
