--- a/src/components/MainPortfolio/MainPortfolio.module.scss
+++ b/src/components/MainPortfolio/MainPortfolio.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
-  position: fixed;
-  inset: 0;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: flex-start;
   align-items: center;
