--- a/src/components/MainPortfolio/About/About.module.scss
+++ b/src/components/MainPortfolio/About/About.module.scss
@@ -3,12 +3,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  width: 80%;
+  width: 70%;
   min-height: 100vh;
-  padding-right: 15%;
+  padding-right: 10%;
 
   p {
     font-size: 30px;
+    font-weight: 400;
+    line-height: 50px;
     margin: 12px 0;
   }
 }
