--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -20,3 +20,5 @@ $white: #f2f2f2;
 $grey: #bfbfbf;
 $primary: #868381;
 $width-content: 750px;
+$bg-grey: rgb(42, 42, 42);
+$light_grey: rgb(161, 161, 161);
