--- a/src/components/MainPortfolio/SelectedWorks/SelectedWorks.module.scss
+++ b/src/components/MainPortfolio/SelectedWorks/SelectedWorks.module.scss
@@ -4,4 +4,65 @@
   flex-direction: column;
   align-items: flex-start;
   position: relative;
+  padding-right: 10%;
+}
+
+.section-header {
+  margin-bottom: 60px;
+  animation: fadeInUp 0.6s ease-out;
+
+  p {
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 28px;
+    margin: 0;
+    opacity: 0.8;
+  }
+}
+
+.projects-container {
+  width: 100%;
+}
+
+.project {
+  animation: slideInUp 0.8s ease-out;
+  animation-fill-mode: both;
+
+  &:nth-child(1) {
+    animation-delay: 0.2s;
+  }
+  &:nth-child(2) {
+    animation-delay: 0.4s;
+  }
+  &:nth-child(3) {
+    animation-delay: 0.6s;
+  }
+  &:nth-child(4) {
+    animation-delay: 0.8s;
+  }
+  &:nth-child(5) {
+    animation-delay: 1s;
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 0.8;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideInUp {
+  from {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
