--- a/src/components/MainPortfolio/Footer/Footer.module.scss
+++ b/src/components/MainPortfolio/Footer/Footer.module.scss
@@ -5,6 +5,11 @@
   position: relative;
   border-top: 1px solid rgba(255, 255, 255, 0.08);
   animation: fadeInUp 0.8s ease-out;
+
+  // Disable animation when using scroll-triggered animations
+  &.no-animation {
+    animation: none;
+  }
 }
 
 .content {
@@ -21,6 +26,11 @@
   animation: slideInLeft 0.8s ease-out;
   animation-delay: 0.2s;
   animation-fill-mode: both;
+
+  // Disable animation when using scroll-triggered animations
+  &.no-animation {
+    animation: none;
+  }
 }
 
 .brand {
@@ -127,7 +137,7 @@
 
 .bottom-section {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   animation: fadeInUp 0.6s ease-out;
   animation-delay: 1s;
