--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -22,3 +22,8 @@ $primary: #868381;
 $width-content: 750px;
 $bg-grey: rgb(42, 42, 42);
 $light_grey: rgb(161, 161, 161);
+
+// Responsive breakpoints
+$mobile: 768px;
+$tablet: 1024px;
+$desktop: 1200px;
