--- a/src/components/MainPortfolio/SelectedWorks/SelectedWorks.module.scss
+++ b/src/components/MainPortfolio/SelectedWorks/SelectedWorks.module.scss
@@ -5,6 +5,12 @@
   align-items: flex-start;
   position: relative;
   padding-right: 10%;
+
+  @media (max-width: $mobile) {
+    width: 90%;
+    padding-right: 0;
+    padding: 0 20px;
+  }
 }
 
 .section-header {
@@ -16,6 +22,11 @@
     font-weight: 1000;
     margin: 150px 0px 50px 0px;
     opacity: 0.8;
+
+    @media (max-width: $mobile) {
+      font-size: 32px;
+      margin: 80px 0px 30px 0px;
+    }
   }
 }
 
