--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -73,6 +73,10 @@ button {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  @media (max-width: 768px) {
+    overflow-x: hidden;
+  }
 }
 
 .webgl {
