--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -9,6 +9,8 @@
 
 html {
   scroll-behavior: smooth;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
 }
 
 button {
@@ -20,6 +22,7 @@ body {
   line-height: 1.5;
   background-color: $black;
   color: $white;
+  overflow-x: hidden;
 }
 
 ul,
