--- a/src/components/MainPortfolio/MainPortfolio.module.scss
+++ b/src/components/MainPortfolio/MainPortfolio.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
   position: relative;
-  width: 100vw;
+  width: 100%;
+  max-width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: flex-start;
@@ -12,6 +13,7 @@
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
+  overflow-x: hidden;
   scrollbar-width: none;
   scroll-behavior: smooth;
   opacity: 0;
