--- a/src/components/Preloader/Preloader.module.scss
+++ b/src/components/Preloader/Preloader.module.scss
@@ -2,7 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
+  max-width: 100vw;
   height: 100vh;
   background-color: $black;
   display: flex;
@@ -10,6 +11,7 @@
   justify-content: center;
   z-index: 10000;
   transition: opacity 0.3s ease-out;
+  overflow-x: hidden;
 
   &.fade-out {
     opacity: 0;
